# rust-experiments

rust_data_engineering/controflow1/: Cargo.toml
rust_data_engineering/fast_api_rest/: main.py  pyproject.toml  send_compute.sh  start.sh  trigger.sh
rust_data_engineering/json_speedup/json_schema_ext/json-schema-ext/: Cargo.toml  example.py  pyproject.toml  schema.json
rust_data_engineering/json_speedup/json_schema_ext/json-schema-ext/src/: lib.rs
rust_data_engineering/json_speedup/pyjsonschema/: json_schema.py  pyproject.toml
rust_data_engineering/parquet/: multiply_items.py  pyproject.toml  read_parquet.py  read_parquet_polars.py
rust_data_engineering/rest_native/: Cargo.toml  send_compute.sh
rust_data_engineering/rest_native/src/: main.rs  rust.md
