[tool.poetry]
name = "fast-api-rest"
version = "0.1.0"
description = ""
authors = ["y"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numba = "^0.59.0"
fastapi = "^0.110.0"
pydantic = "^2.6.3"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
