[tool.poetry]
name = "panda-performance"
version = "0.1.0"
description = ""
authors = ["Giorgio Zoppi <giorgio.zoppi@yenflow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
polars = "^0.20.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
