[package]
name = "rest_native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
image = "0.24.9"
minifb = "0.25.0"
num-complex = "0.4.5"
tower = "0.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
base64 = "0.22.0"
